refactor: Update documentation and refactor method calls for consistency. (#48)